fix bug check query when loading page and add event click for s-m-nav-btn on mobile

--- a/Web-Books-Store/Assets/CSS/Order_status.css
+++ b/Web-Books-Store/Assets/CSS/Order_status.css
@@ -114,22 +114,11 @@
      position: relative;
 }
 
-.history-order-link {
-     max-width: 26%;
-     padding: 0.5em;
-     margin: auto;
-     cursor: pointer;
-}
-
 #customer-order .history-order-link {
      color: var(--primary-white);
      background: var(--main-color);
      border-radius: var(--normal-radius);
      border: 1px solid var(--main-color);
-}
-
-.history-order-link:hover {
-     box-shadow: 0 0 1px var(--primary-dark);
 }
 
 .history-order-table .block-product {
