--- a/Web-Books-Store/Assets/CSS/Style.css
+++ b/Web-Books-Store/Assets/CSS/Style.css
@@ -243,7 +243,13 @@
 }
 
 #sub-header .sub-menu-item.history-order-link:hover {
+     max-width: 26%;
+     padding: 0.5em;
+     margin: auto;
+     cursor: pointer;
      box-shadow: unset;
+     /* box-shadow: 0 0 1px var(--primary-dark); */
+     
 }
 
 /*list-btn */
